# -A-256

./: .gitignore  CMakeLists.txt  README.md
gtests/: CMakeLists.txt  HashTests.cpp
src/: functions.cpp  functions.h  main.cpp  main.h  test-hash.cpp
src/ZA256/: ZA256.h
test-data/: generate-test-data.py  konstitucija.txt  ted-talk.txt  test-data-100K.txt  test-data-10K-0.txt  test-data-10K-1.txt  test-data-10K-2.txt  test-data-one-diff-0.txt  test-data-one-diff-1.txt  test-data-one-diff-2.txt  test-data-one-diff-3.txt  test-data-one-diff-4.txt  test-data-one-diff-5.txt  test-data-one-diff-6.txt  test-data-one-diff-7.txt  test-data-one-diff-8.txt  test-data-one-diff-9.txt  test-data-results.txt
